<?xml version="1.0"?>
<package fomat="2">
	<name>ttrax</name>
	<version>1.1</version>
	<description>
		This package provides Autonomous mode to Eagle-x's TTrax-rover. 
	</description>
	<maintainer email="a01209914@itesm.mx">Fabian Gomez<>
	<maintainer email="a01209351@itesm.mx">Ivan Ochoa<>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>rospy</depend>
	<exec_depend>ros_core</exec_depend>
	<export>
		<metapackage/>	
	</export>
</package>
