<?xml version="1.0"?>
<package format = "2">
	<name>ttrax</name>
	<version>1.1.0</version>
	<description>
		This package provides Autonomous mode to Eagle-x's TTrax-rover.
	</description>
	<maintainer email="a01209914@itesm.mx">
		Fabian Gomez
	</maintainer>
	<maintainer email="a01209351@itesm.mx">
		Ivan Ochoa
	</maintainer>

	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>

	<!--
	<depend>arania_arco</depend>
  	<depend>depthimage_to_laserscan</depend>
  	<depend>navigation</depend>
  	<depend>navigation_2d</depend>
	<depend>zed_wrapper</depend>
	-->
	<!--
	<build_depend>arania_arco</build_depend>
  	<build_depend>depthimage_to_laserscan</build_depend>
  	<build_depend>navigation</build_depend>
  	<build_depend>navigation_2d</build_depend>
	<build_depend>zed_wrapper</build_depend>
	-->

	<build_export_depend>arania_arco</build_export_depend>
  	<build_export_depend>depthimage_to_laserscan</build_export_depend>
  	<build_export_depend>navigation</build_export_depend>
  	<build_export_depend>navigation_2d</build_export_depend>
	<build_export_depend>zed_wrapper</build_export_depend>

	<exec_depend>arania_arco</exec_depend>
  	<exec_depend>depthimage_to_laserscan</exec_depend>
  	<exec_depend>navigation</exec_depend>
  	<exec_depend>navigation_2d</exec_depend>
	<exec_depend>zed_wrapper</exec_depend>

	<export>
		<metapackage/>	
	</export>
</package>
