<?xml version="1.0"?>

<package>
	<name>ttrax</name>
	<version>1.1.0</version>
	<description>
		This package provides Autonomous mode to Eagle-x's TTrax-rover.
	</description>
	<maintainer email="a01209914@itesm.mx">
		Fabian Gomez
	</maintainer>
	<maintainer email="a01209351@itesm.mx">
		Ivan Ochoa
	</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>arania_arco</run_depend>
	<run_depend>depthimage_to_laserscan</run_depend>
	<run_depend>navigation</run_depend>
	<run_depend>navigation_2d</run_depend>
	<run_depend>zed-ros-wrapper</run_depend>
	<run_depend>nav2d_msgs</run_depend>
  	<run_depend>nav2d_tutorials</run_depend>
  	<run_depend>nav2d_operator</run_depend>
  	<run_depend>nav2d_navigator</run_depend>
  	<run_depend>nav2d_localizer</run_depend>
  	<run_depend>nav2d_remote</run_depend>
  	<run_depend>nav2d_karto</run_depend>
  	<run_depend>nav2d_exploration</run_depend>
	<run_depend>amcl</run_depend>
	<run_depend>carrot_planner</run_depend>
	<run_depend>dwa_local_planner</run_depend>
	<run_depend>move_base</run_depend>
	<run_depend>nav_core</run_depend>
	<run_depend>robot_pose_ekf</run_depend>
	<run_depend>base_local_planner</run_depend>
	<run_depend>clear_costmap_recovery</run_depend>
	<run_depend>fake_localization</run_depend>
	<run_depend>global_planner</run_depend>
	<run_depend>move_base_msgs</run_depend>
	<run_depend>navfn</run_depend>
	<run_depend>rotate_recovery</run_depend>
	<run_depend>costmap_2d</run_depend>
	<run_depend>map_server</run_depend>
	<run_depend>move_slow_and_clear</run_depend>
	<run_depend>voxel_grid</run_depend>
	<export>
		<metapackage/>	
	</export>
</package>
